Clean out styles v1 styles editor
https://github.com/bibledit/cloud/issues/990

--- a/Makefile.in
+++ b/Makefile.in
@@ -177,16 +177,15 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	setup/logic.$(OBJEXT) journal/index.$(OBJEXT) \
 	journal/logic.$(OBJEXT) styles/logic.$(OBJEXT) \
 	styles/indexm.$(OBJEXT) styles/sheetm.$(OBJEXT) \
-	styles/view.$(OBJEXT) styles/view2.$(OBJEXT) \
-	styles/css.$(OBJEXT) styles/sheets.$(OBJEXT) \
-	text/text.$(OBJEXT) esword/text.$(OBJEXT) olb/text.$(OBJEXT) \
-	html/text.$(OBJEXT) html/header.$(OBJEXT) odf/text.$(OBJEXT) \
-	timer/index.$(OBJEXT) tasks/logic.$(OBJEXT) \
-	tasks/run.$(OBJEXT) config/logic.$(OBJEXT) bb/logic.$(OBJEXT) \
-	bb/manage.$(OBJEXT) bb/settings.$(OBJEXT) bb/book.$(OBJEXT) \
-	bb/chapter.$(OBJEXT) bb/import_run.$(OBJEXT) \
-	bb/import.$(OBJEXT) bb/order.$(OBJEXT) bb/css.$(OBJEXT) \
-	notes/logic.$(OBJEXT) notes/actions.$(OBJEXT) \
+	styles/view2.$(OBJEXT) styles/css.$(OBJEXT) \
+	styles/sheets.$(OBJEXT) text/text.$(OBJEXT) \
+	esword/text.$(OBJEXT) olb/text.$(OBJEXT) html/text.$(OBJEXT) \
+	html/header.$(OBJEXT) odf/text.$(OBJEXT) timer/index.$(OBJEXT) \
+	tasks/logic.$(OBJEXT) tasks/run.$(OBJEXT) \
+	config/logic.$(OBJEXT) bb/logic.$(OBJEXT) bb/manage.$(OBJEXT) \
+	bb/settings.$(OBJEXT) bb/book.$(OBJEXT) bb/chapter.$(OBJEXT) \
+	bb/import_run.$(OBJEXT) bb/import.$(OBJEXT) bb/order.$(OBJEXT) \
+	bb/css.$(OBJEXT) notes/logic.$(OBJEXT) notes/actions.$(OBJEXT) \
 	notes/note.$(OBJEXT) notes/status-1.$(OBJEXT) \
 	notes/assign-1.$(OBJEXT) notes/notes.$(OBJEXT) \
 	notes/status-n.$(OBJEXT) notes/assign-n.$(OBJEXT) \
@@ -791,14 +790,13 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	sqlite/$(DEPDIR)/sqlite3.Po statistics/$(DEPDIR)/statistics.Po \
 	styles/$(DEPDIR)/css.Po styles/$(DEPDIR)/indexm.Po \
 	styles/$(DEPDIR)/logic.Po styles/$(DEPDIR)/sheetm.Po \
-	styles/$(DEPDIR)/sheets.Po styles/$(DEPDIR)/view.Po \
-	styles/$(DEPDIR)/view2.Po stylesv2/$(DEPDIR)/logic.Po \
-	sword/$(DEPDIR)/logic.Po sync/$(DEPDIR)/bibles.Po \
-	sync/$(DEPDIR)/changes.Po sync/$(DEPDIR)/files.Po \
-	sync/$(DEPDIR)/logic.Po sync/$(DEPDIR)/mail.Po \
-	sync/$(DEPDIR)/notes.Po sync/$(DEPDIR)/resources.Po \
-	sync/$(DEPDIR)/settings.Po sync/$(DEPDIR)/setup.Po \
-	sync/$(DEPDIR)/usfmresources.Po \
+	styles/$(DEPDIR)/sheets.Po styles/$(DEPDIR)/view2.Po \
+	stylesv2/$(DEPDIR)/logic.Po sword/$(DEPDIR)/logic.Po \
+	sync/$(DEPDIR)/bibles.Po sync/$(DEPDIR)/changes.Po \
+	sync/$(DEPDIR)/files.Po sync/$(DEPDIR)/logic.Po \
+	sync/$(DEPDIR)/mail.Po sync/$(DEPDIR)/notes.Po \
+	sync/$(DEPDIR)/resources.Po sync/$(DEPDIR)/settings.Po \
+	sync/$(DEPDIR)/setup.Po sync/$(DEPDIR)/usfmresources.Po \
 	system/$(DEPDIR)/googletranslate.Po system/$(DEPDIR)/index.Po \
 	system/$(DEPDIR)/logic.Po tasks/$(DEPDIR)/logic.Po \
 	tasks/$(DEPDIR)/run.Po text/$(DEPDIR)/text.Po \
@@ -1205,7 +1203,6 @@ libbibledit_a_SOURCES = \
 	styles/logic.cpp \
 	styles/indexm.cpp \
 	styles/sheetm.cpp \
-	styles/view.cpp \
 	styles/view2.cpp \
 	styles/css.cpp \
 	styles/sheets.cpp \
@@ -2172,8 +2169,6 @@ styles/logic.$(OBJEXT): styles/$(am__dirstamp) \
 styles/indexm.$(OBJEXT): styles/$(am__dirstamp) \
 	styles/$(DEPDIR)/$(am__dirstamp)
 styles/sheetm.$(OBJEXT): styles/$(am__dirstamp) \
-	styles/$(DEPDIR)/$(am__dirstamp)
-styles/view.$(OBJEXT): styles/$(am__dirstamp) \
 	styles/$(DEPDIR)/$(am__dirstamp)
 styles/view2.$(OBJEXT): styles/$(am__dirstamp) \
 	styles/$(DEPDIR)/$(am__dirstamp)
@@ -4332,7 +4327,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@styles/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@styles/$(DEPDIR)/sheetm.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@styles/$(DEPDIR)/sheets.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@styles/$(DEPDIR)/view.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@styles/$(DEPDIR)/view2.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@stylesv2/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@sword/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
@@ -5538,7 +5532,6 @@ distclean: distclean-am
 	-rm -f styles/$(DEPDIR)/logic.Po
 	-rm -f styles/$(DEPDIR)/sheetm.Po
 	-rm -f styles/$(DEPDIR)/sheets.Po
-	-rm -f styles/$(DEPDIR)/view.Po
 	-rm -f styles/$(DEPDIR)/view2.Po
 	-rm -f stylesv2/$(DEPDIR)/logic.Po
 	-rm -f sword/$(DEPDIR)/logic.Po
@@ -6230,7 +6223,6 @@ maintainer-clean: maintainer-clean-am
 	-rm -f styles/$(DEPDIR)/logic.Po
 	-rm -f styles/$(DEPDIR)/sheetm.Po
 	-rm -f styles/$(DEPDIR)/sheets.Po
-	-rm -f styles/$(DEPDIR)/view.Po
 	-rm -f styles/$(DEPDIR)/view2.Po
 	-rm -f stylesv2/$(DEPDIR)/logic.Po
 	-rm -f sword/$(DEPDIR)/logic.Po
