Can add marker to stylesheet
The marker to be added will be based on one of the standard markers.
https://github.com/bibledit/cloud/issues/994

--- a/Makefile.am
+++ b/Makefile.am
@@ -98,8 +98,9 @@ libbibledit_a_SOURCES = \
 	journal/logic.cpp \
 	styles/logic.cpp \
 	styles/indexm.cpp \
+	styles/new.cpp \
 	styles/sheetm.cpp \
-	styles/view2.cpp \
+	styles/view.cpp \
 	styles/css.cpp \
 	styles/sheets.cpp \
 	text/text.cpp \
