The text checks refactored a bit
It used to generate checking results through translated text. Now it uses enums, and then translate those.
This change is necessary to be able to delete checking results by item.
https://github.com/bibledit/cloud/issues/1008

--- a/Makefile.am
+++ b/Makefile.am
@@ -305,6 +305,7 @@ libbibledit_a_SOURCES = \
 	checks/run.cpp \
 	checks/headers.cpp \
 	checks/index.cpp \
+	checks/issues.cpp \
 	checks/logic.cpp \
 	checks/sentences.cpp \
 	checks/settings.cpp \
