Rename unit test
https://github.com/bibledit/cloud/issues/1008

--- a/Makefile.am
+++ b/Makefile.am
@@ -619,7 +619,7 @@ unittest_SOURCES = \
 	unittests/config.cpp \
 	unittests/log.cpp \
 	unittests/books.cpp \
-	unittests/check.cpp \
+	unittests/checks.cpp \
 	unittests/localization.cpp \
 	unittests/confirm.cpp \
 	unittests/jobs.cpp \
