--- a/Makefile.in
+++ b/Makefile.in
@@ -461,7 +461,7 @@ am_unittest_OBJECTS = unittests/unittest.$(OBJEXT) \
 	unittests/ldap.$(OBJEXT) unittests/dev.$(OBJEXT) \
 	unittests/sample.$(OBJEXT) unittests/config.$(OBJEXT) \
 	unittests/log.$(OBJEXT) unittests/books.$(OBJEXT) \
-	unittests/check.$(OBJEXT) unittests/localization.$(OBJEXT) \
+	unittests/checks.$(OBJEXT) unittests/localization.$(OBJEXT) \
 	unittests/confirm.$(OBJEXT) unittests/jobs.$(OBJEXT) \
 	unittests/kjv.$(OBJEXT) unittests/oshb.$(OBJEXT) \
 	unittests/sblgnt.$(OBJEXT) unittests/sprint.$(OBJEXT) \
@@ -821,7 +821,7 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	trash/$(DEPDIR)/handler.Po unittests/$(DEPDIR)/archive.Po \
 	unittests/$(DEPDIR)/bibleimages.Po \
 	unittests/$(DEPDIR)/bibles.Po unittests/$(DEPDIR)/books.Po \
-	unittests/$(DEPDIR)/cache.Po unittests/$(DEPDIR)/check.Po \
+	unittests/$(DEPDIR)/cache.Po unittests/$(DEPDIR)/checks.Po \
 	unittests/$(DEPDIR)/checksum.Po unittests/$(DEPDIR)/client.Po \
 	unittests/$(DEPDIR)/config.Po unittests/$(DEPDIR)/confirm.Po \
 	unittests/$(DEPDIR)/date.Po unittests/$(DEPDIR)/dev.Po \
@@ -1724,7 +1724,7 @@ unittest_SOURCES = \
 	unittests/config.cpp \
 	unittests/log.cpp \
 	unittests/books.cpp \
-	unittests/check.cpp \
+	unittests/checks.cpp \
 	unittests/localization.cpp \
 	unittests/confirm.cpp \
 	unittests/jobs.cpp \
@@ -3657,7 +3657,7 @@ unittests/log.$(OBJEXT): unittests/$(am__dirstamp) \
 	unittests/$(DEPDIR)/$(am__dirstamp)
 unittests/books.$(OBJEXT): unittests/$(am__dirstamp) \
 	unittests/$(DEPDIR)/$(am__dirstamp)
-unittests/check.$(OBJEXT): unittests/$(am__dirstamp) \
+unittests/checks.$(OBJEXT): unittests/$(am__dirstamp) \
 	unittests/$(DEPDIR)/$(am__dirstamp)
 unittests/localization.$(OBJEXT): unittests/$(am__dirstamp) \
 	unittests/$(DEPDIR)/$(am__dirstamp)
@@ -4374,7 +4374,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/bibles.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/books.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/cache.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/check.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/checks.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/checksum.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/client.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/config.Po@am__quote@ # am--include-marker
@@ -5576,7 +5576,7 @@ distclean: distclean-am
 	-rm -f unittests/$(DEPDIR)/bibles.Po
 	-rm -f unittests/$(DEPDIR)/books.Po
 	-rm -f unittests/$(DEPDIR)/cache.Po
-	-rm -f unittests/$(DEPDIR)/check.Po
+	-rm -f unittests/$(DEPDIR)/checks.Po
 	-rm -f unittests/$(DEPDIR)/checksum.Po
 	-rm -f unittests/$(DEPDIR)/client.Po
 	-rm -f unittests/$(DEPDIR)/config.Po
@@ -6268,7 +6268,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f unittests/$(DEPDIR)/bibles.Po
 	-rm -f unittests/$(DEPDIR)/books.Po
 	-rm -f unittests/$(DEPDIR)/cache.Po
-	-rm -f unittests/$(DEPDIR)/check.Po
+	-rm -f unittests/$(DEPDIR)/checks.Po
 	-rm -f unittests/$(DEPDIR)/checksum.Po
 	-rm -f unittests/$(DEPDIR)/client.Po
 	-rm -f unittests/$(DEPDIR)/config.Po
